--- a/index.html
+++ b/index.html
@@ -4,7 +4,282 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Тарифы</title>
-  <link rel="stylesheet" href="styles.css" />
+  <style>
+:root {
+  --bg: #f8f9fb;
+  --card-bg: #ffffff;
+  --border: #e4e7ee;
+  --primary: #1c74ff;
+  --accent: #111827;
+  --muted: #6b7280;
+  --shadow: 0 12px 40px rgba(0, 0, 0, 0.08);
+}
+
+* { box-sizing: border-box; }
+
+body {
+  margin: 0;
+  font-family: "Inter", system-ui, -apple-system, sans-serif;
+  background: radial-gradient(circle at 10% 20%, #eef2ff 0, #f8f9fb 25%, #f8f9fb 100%);
+  color: var(--accent);
+}
+
+.page {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 40px 16px 80px;
+}
+
+.page__header h1 {
+  margin: 0 0 8px;
+  font-size: 32px;
+}
+
+.page__hint {
+  margin: 0 0 24px;
+  color: var(--muted);
+}
+
+.plans {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 16px;
+}
+
+.plan {
+  background: var(--card-bg);
+  border: 1px solid var(--border);
+  border-radius: 16px;
+  padding: 20px;
+  box-shadow: var(--shadow);
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.plan--featured {
+  border: 1px solid #dbeafe;
+  box-shadow: 0 16px 44px rgba(28, 116, 255, 0.12);
+}
+
+.plan__heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 12px;
+}
+
+.plan__title {
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.plan__audience {
+  color: var(--muted);
+  font-size: 14px;
+}
+
+.plan__price {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.plan__meta,
+.plan__benefit {
+  background: #f5f7fb;
+  border: 1px dashed var(--border);
+  border-radius: 12px;
+  padding: 10px 12px;
+  font-size: 14px;
+  color: #374151;
+}
+
+.plan__benefit {
+  background: linear-gradient(90deg, #eff6ff, #fff);
+  border-color: #bfdbfe;
+}
+
+.features {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.feature {
+  border: 1px solid var(--border);
+  border-radius: 12px;
+  padding: 12px;
+  background: #fcfdff;
+}
+
+.feature__label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-weight: 600;
+}
+
+.check {
+  width: 16px;
+  height: 16px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  border: 1px solid var(--border);
+  background: #fff;
+}
+
+.feature__controls {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-top: 10px;
+  align-items: center;
+}
+
+.icon-menu {
+  display: inline-flex;
+  border: 1px solid var(--border);
+  border-radius: 12px;
+  padding: 2px;
+  background: #fff;
+}
+
+.icon-menu__item {
+  width: 32px;
+  height: 32px;
+  border-radius: 10px;
+  border: 1px solid transparent;
+  background: #f3f4f6;
+  cursor: pointer;
+  padding: 0;
+}
+
+.icon-menu__item.is-active {
+  border-color: #2563eb;
+  background: linear-gradient(120deg, #eff6ff, #e0f2fe);
+}
+
+.subtoggle {
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;
+  padding: 6px 10px;
+  border: 1px solid var(--border);
+  border-radius: 10px;
+  background: #fff;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.subtoggle input {
+  accent-color: var(--primary);
+}
+
+.feature__tooltip {
+  font-size: 12px;
+  background: #e5e7eb;
+  color: #111827;
+  width: 18px;
+  height: 18px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  cursor: help;
+}
+
+.quantity {
+  display: inline-flex;
+  align-items: center;
+  border: 1px solid var(--border);
+  border-radius: 10px;
+  overflow: hidden;
+  background: #fff;
+}
+
+.quantity__btn {
+  border: none;
+  background: transparent;
+  padding: 8px 10px;
+  font-size: 16px;
+  cursor: pointer;
+  color: var(--accent);
+}
+
+.quantity__btn:active {
+  background: #eef2ff;
+}
+
+.quantity__value {
+  min-width: 24px;
+  text-align: center;
+  font-weight: 600;
+}
+
+.feature__note {
+  color: var(--muted);
+  font-size: 13px;
+}
+
+.addons {
+  border: 1px dashed var(--border);
+  border-radius: 12px;
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  background: #f8fafc;
+}
+
+.addons--active {
+  border-color: #bfdbfe;
+  background: #eff6ff;
+}
+
+.addons__title {
+  font-weight: 600;
+  color: #1f2937;
+}
+
+.addon {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+  font-size: 14px;
+}
+
+.addon input { accent-color: var(--primary); }
+
+.plan__note {
+  color: var(--muted);
+  font-size: 13px;
+  line-height: 1.5;
+}
+
+.plan__cta {
+  width: 100%;
+  padding: 12px;
+  background: linear-gradient(120deg, #2563eb, #0ea5e9);
+  color: #fff;
+  border: none;
+  border-radius: 12px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.plan__cta:hover { opacity: 0.95; }
+
+@media (max-width: 640px) {
+  .plan { padding: 16px; }
+  .plan__heading { flex-direction: column; align-items: flex-start; }
+}
+  </style>
 </head>
 <body>
   <main class="page">
@@ -102,7 +377,7 @@
           </li>
         </ul>
         <div class="addons" data-addons>
-          <div class="addons__title">Добавьте элементы из премиум и VIP</div>
+          <div class="addons__title">Добавьте элеметы из премиум и VIP</div>
           <label class="addon">
             <input type="checkbox" data-addon="promo-banner" />
             <span>Дополнительный рекламный баннер (кол-во настраивается ниже)</span>
@@ -338,6 +613,60 @@
       </article>
     </section>
   </main>
-  <script src="script.js"></script>
+
+  <script>
+const clamp = (value, min = 0) => Math.max(min, value);
+
+function updateQuantity(container, delta) {
+  const valueNode = container.querySelector('.quantity__value');
+  const current = Number(valueNode.textContent) || 0;
+  const next = clamp(current + delta, 0);
+  valueNode.textContent = next;
+}
+
+function bindQuantities(root) {
+  root.querySelectorAll('[data-quantity]').forEach((container) => {
+    container.addEventListener('click', (event) => {
+      const button = event.target.closest('[data-change]');
+      if (!button) return;
+      event.preventDefault();
+      updateQuantity(container, Number(button.dataset.change));
+    });
+  });
+}
+
+function bindIconMenus(root) {
+  root.querySelectorAll('[data-icon-menu]').forEach((menu) => {
+    menu.addEventListener('click', (event) => {
+      const button = event.target.closest('.icon-menu__item');
+      if (!button) return;
+      menu.querySelectorAll('.icon-menu__item').forEach((item) => item.classList.remove('is-active'));
+      button.classList.add('is-active');
+    });
+  });
+}
+
+function bindAddons(plan) {
+  const addons = plan.querySelector('[data-addons]');
+  if (!addons) return;
+
+  addons.querySelectorAll('.addon input[type="checkbox"]').forEach((checkbox) => {
+    checkbox.addEventListener('change', () => {
+      addons.classList.toggle('addons--active', checkbox.checked);
+    });
+  });
+}
+
+function init() {
+  const root = document;
+  bindQuantities(root);
+  bindIconMenus(root);
+  root.querySelectorAll('[data-plan]').forEach((plan) => {
+    bindAddons(plan);
+  });
+}
+
+document.addEventListener('DOMContentLoaded', init);
+  </script>
 </body>
 </html>
