--- a/index.html
+++ b/index.html
@@ -1181,14 +1181,14 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
 .choice-pill.active { background: rgba(255,51,51,0.14); border-color: rgba(255,51,51,0.45); color:#fff; box-shadow: 0 8px 18px rgba(255,51,51,0.2); }
 .choice-pill input { display:none; }
 .choice-pill .pill-visual { display:flex; align-items:center; gap:10px; }
-.cover-icon { width:32px; height:32px; border-radius:10px; display:inline-flex; align-items:center; justify-content:center; position:relative; overflow:hidden; background: rgba(255,255,255,0.06); box-shadow: inset 0 0 0 1px rgba(255,255,255,0.08); }
+.cover-icon { width:26px; height:26px; border-radius:8px; display:inline-flex; align-items:center; justify-content:center; position:relative; overflow:hidden; background: rgba(255,255,255,0.06); box-shadow: inset 0 0 0 1px rgba(255,255,255,0.08); }
 .cover-icon::after { content:''; position:absolute; inset:0; opacity:0.08; background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.6), transparent 55%); transition: opacity .2s ease; }
-.cover-icon.static::before { content:'▦'; font-size:15px; color:#fff; opacity:0.8; }
+.cover-icon.static::before { content:'▦'; font-size:12px; color:#fff; opacity:0.8; }
 .cover-icon.animated { background: linear-gradient(120deg, rgba(255,51,51,0.55), rgba(255,140,80,0.65)); box-shadow: inset 0 0 0 1px rgba(255,255,255,0.15), 0 6px 16px rgba(255,68,68,0.25); }
-.cover-icon.animated::before { content:'▶'; font-size:13px; color:#fff; opacity:0.9; }
+.cover-icon.animated::before { content:'▶'; font-size:11px; color:#fff; opacity:0.9; }
 .choice-pill:hover .cover-icon::after, .choice-pill.active .cover-icon::after { opacity:0.18; }
 .choice-pill:hover .cover-icon.static { box-shadow: inset 0 0 0 1px rgba(255,255,255,0.22); }
-.choice-label { font-weight:800; color:#fff; min-width:140px; }
+.choice-label { font-weight:800; color:#fff; min-width:140px; display:flex; align-items:center; gap:8px; }
 .choice-row { flex-direction:column; align-items:flex-start; gap:10px; }
 
 .tariff-btn { width:100%; padding:16px; background:transparent; border:1px solid rgba(255,255,255,0.10); color:#fff; border-radius: 12px; font-weight:900; font-size:16px; cursor:pointer; transition:.3s; margin-top:auto; }
@@ -2402,7 +2402,10 @@ a.profile-meta { display: flex; align-items: center; justify-content: center; ga
 
     <li class="tariff-feature-item choice-row" data-type="base">
       <div class="item-left">
-        <div class="choice-label">Мобильная обложка</div>
+        <div class="choice-label">
+          <input type="checkbox" class="feature-checkbox" checked disabled aria-label="Мобильная обложка включена по умолчанию">
+          <span>Мобильная обложка</span>
+        </div>
         <div class="choice-pills" data-label="Мобильная обложка">
           <label class="choice-pill active" title="Статичная мобильная обложка">
             <input type="radio" name="mobile-cover-standard" value="Мобильная статичная обложка" data-price="0" checked onchange="handleChoiceChange(this)">
@@ -2566,7 +2569,10 @@ a.profile-meta { display: flex; align-items: center; justify-content: center; ga
     
     <li class="tariff-feature-item choice-row" data-type="base">
       <div class="item-left">
-        <div class="choice-label">Мобильная обложка</div>
+        <div class="choice-label">
+          <input type="checkbox" class="feature-checkbox" checked disabled aria-label="Мобильная обложка включена по умолчанию">
+          <span>Мобильная обложка</span>
+        </div>
         <div class="choice-pills" data-label="Мобильная обложка">
           <label class="choice-pill" title="Статичная мобильная обложка">
             <input type="radio" name="mobile-cover-premium" value="Мобильная статичная обложка" onchange="handleChoiceChange(this)">
@@ -2752,7 +2758,10 @@ a.profile-meta { display: flex; align-items: center; justify-content: center; ga
     
     <li class="tariff-feature-item choice-row" data-type="base">
       <div class="item-left">
-        <div class="choice-label">Мобильная обложка</div>
+        <div class="choice-label">
+          <input type="checkbox" class="feature-checkbox" checked disabled aria-label="Мобильная обложка включена по умолчанию">
+          <span>Мобильная обложка</span>
+        </div>
         <div class="choice-pills" data-label="Мобильная обложка">
           <label class="choice-pill" title="Статичная мобильная обложка">
             <input type="radio" name="mobile-cover-vip" value="Мобильная статичная обложка" onchange="handleChoiceChange(this)">
