--- a/index.html
+++ b/index.html
@@ -1181,14 +1181,14 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
 .choice-pill.active { background: rgba(255,51,51,0.14); border-color: rgba(255,51,51,0.45); color:#fff; box-shadow: 0 8px 18px rgba(255,51,51,0.2); }
 .choice-pill input { display:none; }
 .choice-pill .pill-visual { display:flex; align-items:center; gap:10px; }
-.cover-icon { width:26px; height:26px; border-radius:8px; display:inline-flex; align-items:center; justify-content:center; position:relative; overflow:hidden; background: rgba(255,255,255,0.06); box-shadow: inset 0 0 0 1px rgba(255,255,255,0.08); }
+.cover-icon { width:22px; height:22px; border-radius:8px; display:inline-flex; align-items:center; justify-content:center; position:relative; overflow:hidden; background: rgba(255,255,255,0.06); box-shadow: inset 0 0 0 1px rgba(255,255,255,0.08); }
 .cover-icon::after { content:''; position:absolute; inset:0; opacity:0.08; background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.6), transparent 55%); transition: opacity .2s ease; }
-.cover-icon.static::before { content:'▦'; font-size:12px; color:#fff; opacity:0.8; }
+.cover-icon.static::before { content:'▦'; font-size:10px; color:#fff; opacity:0.8; }
 .cover-icon.animated { background: linear-gradient(120deg, rgba(255,51,51,0.55), rgba(255,140,80,0.65)); box-shadow: inset 0 0 0 1px rgba(255,255,255,0.15), 0 6px 16px rgba(255,68,68,0.25); }
-.cover-icon.animated::before { content:'▶'; font-size:11px; color:#fff; opacity:0.9; }
+.cover-icon.animated::before { content:'▶'; font-size:9px; color:#fff; opacity:0.9; }
 .choice-pill:hover .cover-icon::after, .choice-pill.active .cover-icon::after { opacity:0.18; }
 .choice-pill:hover .cover-icon.static { box-shadow: inset 0 0 0 1px rgba(255,255,255,0.22); }
-.choice-label { font-weight:800; color:#fff; min-width:140px; display:flex; align-items:center; gap:8px; }
+.choice-label { font-weight:600; color: rgba(255,255,255,0.75); min-width:140px; display:flex; align-items:center; gap:8px; }
 .choice-row { flex-direction:column; align-items:flex-start; gap:10px; }
 
 .tariff-btn { width:100%; padding:16px; background:transparent; border:1px solid rgba(255,255,255,0.10); color:#fff; border-radius: 12px; font-weight:900; font-size:16px; cursor:pointer; transition:.3s; margin-top:auto; }
@@ -2810,7 +2810,7 @@ a.profile-meta { display: flex; align-items: center; justify-content: center; ga
     
     <li class="tariff-feature-item" data-type="base" data-mode="qty" data-unit-price="1000" data-base-qty="1" data-label="Баннер для закрепа" data-min="1">
       <div class="item-left">
-          <input type="checkbox" class="feature-checkbox qty-checkbox" checked disabled aria-label="Обязательная позиция">
+          <input type="checkbox" class="feature-checkbox qty-checkbox" checked aria-label="Обязательная позиция">
         <span>Баннер для закрепа <span class="info-icon" data-tooltip="Креатив под закрепленный пост, входит в пакет.">?</span></span>
       </div>
       <div class="qty-control">
@@ -2822,7 +2822,7 @@ a.profile-meta { display: flex; align-items: center; justify-content: center; ga
 
     <li class="tariff-feature-item" data-type="base" data-mode="qty" data-unit-price="1000" data-base-qty="2" data-label="Баннеры для рекламы" data-min="2">
       <div class="item-left">
-          <input type="checkbox" class="feature-checkbox qty-checkbox" checked disabled aria-label="Обязательная позиция">
+          <input type="checkbox" class="feature-checkbox qty-checkbox" checked aria-label="Обязательная позиция">
         <span>Баннеры для рекламы <span class="info-icon" data-tooltip="Готовые баннеры для рекламных размещений.">?</span></span>
       </div>
       <div class="qty-control">
@@ -2841,7 +2841,7 @@ a.profile-meta { display: flex; align-items: center; justify-content: center; ga
     
     <li class="tariff-feature-item" data-type="base" data-mode="qty" data-unit-price="0" data-base-qty="1" data-label="Шаблон постов" data-min="1">
       <div class="item-left">
-        <input type="checkbox" class="feature-checkbox qty-checkbox" checked disabled aria-label="Обязательная позиция">
+        <input type="checkbox" class="feature-checkbox qty-checkbox" checked aria-label="Обязательная позиция">
         <span>Шаблон постов <span class="info-icon" data-tooltip="Шаблон для оформления постов.">?</span></span>
       </div>
       <div class="qty-control">
