--- a/index.html
+++ b/index.html
@@ -2874,6 +2874,87 @@ a.profile-meta { display: flex; align-items: center; justify-content: center; ga
 
 
 </style>
+<style>
+/* Центровка заголовка заказа и компактная кнопка копирования */
+.order-total-header {
+    font-size: 18px;
+    font-weight: 800;
+    margin-bottom: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    text-align: center;
+}
+
+.order-title-group {
+    display: flex;
+    align-items: baseline;
+    gap: 8px;
+    color: #fff;
+    letter-spacing: 0.2px;
+}
+
+.order-total-label { color: #fff; }
+.order-total-amount { font-weight: 800; color: #fff; }
+
+.copy-btn {
+    width: 44px;
+    height: 44px;
+    padding: 0;
+    border-radius: 14px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
+    background: rgba(255,255,255,0.08);
+    border: 1px solid rgba(255,255,255,0.16);
+}
+
+.copy-btn .copy-text {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
+.copy-btn .copy-icon { transition: transform 0.2s ease, color 0.2s ease; }
+.copy-btn:hover .copy-icon { transform: translateY(-1px); }
+.copy-btn.copied { color: #4CAF50; border-color: rgba(76,175,80,0.5); background: rgba(76,175,80,0.12); }
+
+.copy-toast {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    background: rgba(0, 0, 0, 0.85);
+    border: 1px solid rgba(255,255,255,0.12);
+    padding: 10px 12px;
+    border-radius: 12px;
+    color: #8be28b;
+    font-size: 13px;
+    opacity: 0;
+    transform: translateY(-8px);
+    transition: opacity 0.2s ease, transform 0.2s ease;
+    pointer-events: none;
+    box-shadow: 0 12px 30px rgba(0,0,0,0.35);
+    z-index: 10010;
+}
+
+.copy-toast.error {
+    color: #ffc7c7;
+    border-color: rgba(255,140,140,0.25);
+}
+
+.copy-toast.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+</style>
 </head>
 <body><div id="modal-progress-bar"></div>
 
@@ -3596,16 +3677,16 @@ a.profile-meta { display: flex; align-items: center; justify-content: center; ga
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M18 6L6 18M6 6l12 12"/></svg>
         </button>
         <div class="order-total-header">
-          <div class="order-total-title">
-            <span>Ваш заказ</span>
+          <div class="order-title-group">
+            <span class="order-total-label">Ваш заказ</span>
             <span class="order-total-amount" id="order-total-amount">—</span>
           </div>
-          <button class="copy-btn" onclick="copyOrderText()" title="Скопировать состав заказа">
-              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg>
-              <span>Копировать</span>
+          <button class="copy-btn" onclick="copyOrderText()" title="Скопировать состав заказа" aria-label="Скопировать заказ">
+              <svg class="copy-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg>
+              <span class="copy-text">Скопировать</span>
           </button>
         </div>
-        <div class="copy-toast" id="copy-toast" aria-live="polite"></div>
+        <div class="copy-toast" id="copy-toast" role="status" aria-live="polite"></div>
         <p style="text-align:center; opacity:0.7; margin-top:0;">Скопируйте состав и отправьте мне:</p>
 
         <!-- Сюда скрипт может вставить textarea, если нужно -->
@@ -3643,8 +3724,14 @@ function showCopyToast(success = true) {
     const toast = document.getElementById('copy-toast');
     if (!toast) return;
     toast.textContent = success ? 'Состав скопирован' : 'Не удалось скопировать';
-    toast.classList.add('show');
-    setTimeout(() => toast.classList.remove('show'), 1500);
+    toast.classList.remove('show', 'error');
+    if (!success) {
+        toast.classList.add('error');
+    }
+    requestAnimationFrame(() => {
+        toast.classList.add('show');
+    });
+    setTimeout(() => toast.classList.remove('show'), 1800);
 }
 
 function copyOrderText() {
@@ -3656,11 +3743,8 @@ function copyOrderText() {
     navigator.clipboard.writeText(text).then(() => {
         const btn = document.querySelector(".copy-btn");
         if (btn) {
-            const originalHtml = btn.innerHTML;
             btn.classList.add('copied');
-            btn.innerHTML = "<svg width=\"18\" height=\"18\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"#4CAF50\" stroke-width=\"2\"><polyline points=\"20 6 9 17 4 12\"></polyline></svg><span>Скопировано</span>";
             setTimeout(() => {
-                btn.innerHTML = originalHtml;
                 btn.classList.remove('copied');
             }, 2000);
         }
